# windfall-engine

./: LICENSE  README.md  apply_aliases.py  main.py  migrate_v021.py  pyproject.toml  test_engine.py  version.py
.github/ISSUE_TEMPLATE/: blueprint.yml  blueprint_local.md
.github/workflows/: update-readme.yml
src/windfall/: core.py  events.py
src/windfall/renderers/: tui.py
tests/: test_engine.py  test_events.py
updates/: changelog.md  version.json
windfall/: core.py  events.py
windfall/engine/: __init__.py
windfall/engine/core/: core.py
windfall/engine/events/: manager.py
windfall/engine/renderers/: tui.py
windfall/engine/scenes/: menu.py  splash.py
windfall/renderers/: tui.py
windfall/scenes/: base.py  menu.py  splash.py
