[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windfall-engine"
version = "0.1.0"
description = "A multi-modal game engine for TUI, 2D, and 3D development."
readme = "README.md"
authors = [{ name = "Timothy Burt" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pygame>=2.0.0",
]

[project.optional-dependencies]
tui = ["blessed>=1.19.1"]
all = ["pygame>=2.0.0", "blessed>=1.19.1"]

[tool.setuptools.packages.find]
where = ["src"]